@@ -1,1 +1,2 @@
 config.scm
+version.scm
