@@ -7,6 +7,11 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
+* Unreleased
+** Add Markdown table preset
+** New module: =(dsv version)=
+    This module contains procedures that return information about the current
+    Guile-DSV version.
 * Changes in version 0.5.0 (2021-12-12)
 ** Bugfixes
 *** Fix a regression in =dsv --summary= introduced in 0.4.1
